# search-for-candidates

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  LAYER2_GUIDE.md  README.md  compose.yaml  config.layer2.yaml  config.quickstart.yaml  config.smoke5.yaml  config.vk.yaml  config.yaml  pyproject.toml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: codex.manifest.json  cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
app/: __init__.py  __main__.py  cli.py  config.py
app/api/: README.md  main.py  service.py
app/db/: repository.py  schema.sql
app/export/: xlsx.py
app/matching/: employee_merge.py  identity_key.py  matcher.py  normalize.py
app/pipeline/: cancellation.py  ingest.py  run.py
app/registry/: loader.py
app/sources/: http_client.py
app/sources/universities/: layer1.py  layer2.py  struct.py
app/sources/vak/: client.py  parser.py  pipeline.py
app/sources/vk/: browser.py
app/vk/: __init__.py
data/: university_registry.csv
research/BAK/: vak-analysis.md
research/pipeline/: app-architecture.md  candidate-pipeline-architecture.md
research/sites_uniks/: university-sites-analysis.md
research/vk/: vk-matching-spec.md
specs/001-core-pipeline-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-pipeline-mvp/checklists/: requirements.md
specs/001-core-pipeline-mvp/contracts/: cli-contract.md  future-layer2-vk-stub-contract.md  xlsx-contract.md
tests/: crawl4ai_direct_test.py  layer2_preview_domains.py  run_layer2_smoke.py  test_api.py  yandex_direct_test.py  yandex_endpoint_probe.py  yandex_host_probe.py
tests/unit/: test_identity_key.py  test_matcher.py  test_normalize.py  test_xlsx_contract.py
university_registry/: README.md  _probe_xml.py  build_university_registry.py  download_accred_data.py  extract_urls.py  parse_raoo_points.py  resolve_vk_browser.py  resolve_vk_groups.py
