[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "search-for-candidates"
version = "0.1.0"
description = "Batch CLI pipeline for university employee and VAK candidate matching"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "lxml>=5.0",
    "selectolax>=0.3.21",
    "openpyxl>=3.1",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.0",
    "crawl4ai>=0.3.0",
    "openai>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
