[build-system]
requires = ["setuptools>=83"]
build-backend = "setuptools.build_meta"

[project]
name = "search-for-candidates"
version = "0.1.0"
description = "Batch CLI pipeline for university employee and VAK candidate matching"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "selectolax>=0.4.11",
    "tenacity>=9.1.4",
    "openpyxl>=3.1.5",
    "PyYAML>=6.0.3",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "crawl4ai>=0.9.2",
    "openai>=2.45.0",
    "playwright>=1.61.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
